// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeleteTemplateModal /> tests should match snapshot 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <div
              class="Layout--horizontal StyledProps--main preview preview StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-center StyledProps--padding-top-huge StyledProps--padding-bottom-huge"
            >
              <div
                class="StyledProps--font StyledProps--main container"
              >
                <div
                  class="bp3-card bp3-elevation-0 Card--card templateCard"
                >
                  <div />
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-small StyledProps--flex"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="harness-with-color"
                      >
                        <svg
                          height="24"
                          viewBox="0 0 25 25"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
                      data-testid="manjutesttemplate"
                      style="--text-line-clamp: 1;"
                    >
                      manju-test-template-qq-12344
                    </p>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400 StyledProps--margin-top-xsmall"
                      style="--text-line-clamp: 1;"
                    >
                      idLabel
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag scopeLabel project"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          SCOPE: PROJECT
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main container"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main tagsContainer"
                      >
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              QAR
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Internal 1
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Canary 1
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              BLUE
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Tag A
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--background-grey100"
                    style="height: 1px;"
                  />
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag version"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          v4
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--color StyledProps--color-grey800"
                      >
                        lastUpdated
                      </p>
                      <span
                        class="bp3-popover-wrapper bp3-dark"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <span
                            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-xsmall StyledProps--color StyledProps--color-grey800"
                            tabindex="0"
                          >
                            dummy date
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--padding-top-medium"
                  >
                    <div
                      class="css-12eylzo"
                      fill="#EADEFF"
                      stroke="#E1D0FF"
                      width="100"
                    >
                      <div>
                        <p
                          class="StyledProps--font StyledProps--main text absolutePos"
                          style="color: rgb(89, 43, 170);"
                        >
                          STEP
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main selectVersions StyledProps--padding-left-xxlarge StyledProps--padding-right-xxlarge"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                style="height: 100%;"
              >
                <div
                  class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
                  data-name=""
                  style="width: 100%; max-width: 100%;"
                >
                  <span
                    class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
                    data-icon="thinner-search"
                  >
                    <svg
                      fill="none"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input  ExpandingSearchInput--filter"
                    dir="auto"
                    placeholder="Search"
                    style="padding-right: 38px;"
                    type="search"
                    value=""
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="Layout--vertical StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-stretch"
                    style="height: 100%;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="overflow: auto; height: 300px;"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.templatesLibrary.stableVersion
                        </p>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
                      >
                        <input
                          checked=""
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        common.selectAll
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-medium StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--border StyledProps--border-top StyledProps--border-color-grey100"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
          >
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end StyledProps--flex-justifyContent-flex-start"
              >
                <button
                  aria-label="Delete Selected"
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                  disabled=""
                  tabindex="-1"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Delete Selected
                  </span>
                </button>
                <button
                  aria-label="cancel"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    cancel
                  </span>
                </button>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                >
                  common.totalSelected
                </p>
                <p
                  class="StyledProps--font StyledProps--main badge StyledProps--background-primary7 StyledProps--color StyledProps--color-white"
                >
                  0
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DeleteTemplateModal /> tests should match snapshot when error occurs in deleteTemplates operation 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <div
              class="Layout--horizontal StyledProps--main preview preview StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-center StyledProps--padding-top-huge StyledProps--padding-bottom-huge"
            >
              <div
                class="StyledProps--font StyledProps--main container"
              >
                <div
                  class="bp3-card bp3-elevation-0 Card--card templateCard"
                >
                  <div />
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-small StyledProps--flex"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="harness-with-color"
                      >
                        <svg
                          height="24"
                          viewBox="0 0 25 25"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
                      data-testid="manjutesttemplate"
                      style="--text-line-clamp: 1;"
                    >
                      manju-test-template-qq-12344
                    </p>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400 StyledProps--margin-top-xsmall"
                      style="--text-line-clamp: 1;"
                    >
                      idLabel
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag scopeLabel project"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          SCOPE: PROJECT
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main container"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main tagsContainer"
                      >
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              QAR
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Internal 1
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Canary 1
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              BLUE
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Tag A
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--background-grey100"
                    style="height: 1px;"
                  />
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag version"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          v4
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--color StyledProps--color-grey800"
                      >
                        lastUpdated
                      </p>
                      <span
                        class="bp3-popover-wrapper bp3-dark"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <span
                            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-xsmall StyledProps--color StyledProps--color-grey800"
                            tabindex="0"
                          >
                            dummy date
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--padding-top-medium"
                  >
                    <div
                      class="css-12eylzo"
                      fill="#EADEFF"
                      stroke="#E1D0FF"
                      width="100"
                    >
                      <div>
                        <p
                          class="StyledProps--font StyledProps--main text absolutePos"
                          style="color: rgb(89, 43, 170);"
                        >
                          STEP
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main selectVersions StyledProps--padding-left-xxlarge StyledProps--padding-right-xxlarge"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                style="height: 100%;"
              >
                <div
                  class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
                  data-name=""
                  style="width: 100%; max-width: 100%;"
                >
                  <span
                    class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
                    data-icon="thinner-search"
                  >
                    <svg
                      fill="none"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input  ExpandingSearchInput--filter"
                    dir="auto"
                    placeholder="Search"
                    style="padding-right: 38px;"
                    type="search"
                    value=""
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="Layout--vertical StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-stretch"
                    style="height: 100%;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="overflow: auto; height: 300px;"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox selected Checkbox--checked StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main selected"
                        >
                          pipeline.templatesLibrary.stableVersion
                        </p>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox Checkbox--checked StyledProps--main"
                      >
                        <input
                          checked=""
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        common.selectAll
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-medium StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--border StyledProps--border-top StyledProps--border-color-grey100"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
          >
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end StyledProps--flex-justifyContent-flex-start"
              >
                <button
                  aria-label="Delete Selected"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Delete Selected
                  </span>
                </button>
                <button
                  aria-label="cancel"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    cancel
                  </span>
                </button>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                >
                  common.totalSelected
                </p>
                <p
                  class="StyledProps--font StyledProps--main badge StyledProps--background-primary7 StyledProps--color StyledProps--color-white"
                >
                  1
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DeleteTemplateModal /> tests should match snapshot when error occurs in useMutateAsGet 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  />
</div>
`;

exports[`<DeleteTemplateModal /> tests should match snapshot when loading is true 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
      data-testid="page-spinner"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
          data-icon="steps-spinner"
        >
          <svg
            height="32"
            viewBox="0 0 128 128"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                fill="#ff8e02"
              />
              <path
                d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                fill="#ffddb3"
                fill-opacity="0.3"
              />
              <path
                d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                fill="#ffd29a"
                fill-opacity="0.4"
              />
              <path
                d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                fill="#ffc680"
                fill-opacity="0.5"
              />
              <path
                d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                fill="#ffbb67"
                fill-opacity="0.6"
              />
              <path
                d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                fill="#ffb04d"
                fill-opacity="0.7"
              />
              <path
                d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                fill="#ffa535"
                fill-opacity="0.8"
              />
              <path
                d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                fill="#ff991b"
                fill-opacity="0.9"
              />
              <animatetransform
                attributeName="transform"
                calcMode="discrete"
                dur="1200ms"
                repeatCount="indefinite"
                type="rotate"
                values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
              />
            </g>
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
        >
          Loading, please wait...
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DeleteTemplateModal /> tests should match snapshot when multiple versions are present 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <div
              class="Layout--horizontal StyledProps--main preview preview StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-center StyledProps--padding-top-huge StyledProps--padding-bottom-huge"
            >
              <div
                class="StyledProps--font StyledProps--main container"
              >
                <div
                  class="bp3-card bp3-elevation-0 Card--card templateCard"
                >
                  <div />
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-small StyledProps--flex"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="harness-with-color"
                      >
                        <svg
                          height="24"
                          viewBox="0 0 25 25"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
                      data-testid="manjutesttemplate"
                      style="--text-line-clamp: 1;"
                    >
                      manju-test-template-qq-12344
                    </p>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400 StyledProps--margin-top-xsmall"
                      style="--text-line-clamp: 1;"
                    >
                      idLabel
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag scopeLabel project"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          SCOPE: PROJECT
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main container"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main tagsContainer"
                      >
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              QAR
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Internal 1
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Canary 1
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              BLUE
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Tag A
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--background-grey100"
                    style="height: 1px;"
                  />
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag version"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          v4
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--color StyledProps--color-grey800"
                      >
                        lastUpdated
                      </p>
                      <span
                        class="bp3-popover-wrapper bp3-dark"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <span
                            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-xsmall StyledProps--color StyledProps--color-grey800"
                            tabindex="0"
                          >
                            dummy date
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--padding-top-medium"
                  >
                    <div
                      class="css-12eylzo"
                      fill="#EADEFF"
                      stroke="#E1D0FF"
                      width="100"
                    >
                      <div>
                        <p
                          class="StyledProps--font StyledProps--main text absolutePos"
                          style="color: rgb(89, 43, 170);"
                        >
                          STEP
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main selectVersions StyledProps--padding-left-xxlarge StyledProps--padding-right-xxlarge"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                style="height: 100%;"
              >
                <div
                  class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
                  data-name=""
                  style="width: 100%; max-width: 100%;"
                >
                  <span
                    class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
                    data-icon="thinner-search"
                  >
                    <svg
                      fill="none"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input  ExpandingSearchInput--filter"
                    dir="auto"
                    placeholder="Search"
                    style="padding-right: 38px;"
                    type="search"
                    value=""
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="Layout--vertical StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-stretch"
                    style="height: 100%;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="overflow: auto; height: 300px;"
                    >
                      <label
                        class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox StyledProps--main"
                      >
                        <input
                          disabled=""
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target Text--targetClass"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                              tabindex="0"
                            >
                              pipeline.templatesLibrary.stableVersion
                            </p>
                          </span>
                        </span>
                      </label>
                      <label
                        class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox StyledProps--main"
                      >
                        <input
                          disabled=""
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target Text--targetClass"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                              tabindex="0"
                            >
                              pipeline.templatesLibrary.stableVersion
                            </p>
                          </span>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox Checkbox--checked StyledProps--main"
                      >
                        <input
                          checked=""
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        common.template.deleteTemplate.selectAllExceptStable
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-medium StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--border StyledProps--border-top StyledProps--border-color-grey100"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
          >
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end StyledProps--flex-justifyContent-flex-start"
              >
                <button
                  aria-label="Delete Selected"
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                  disabled=""
                  tabindex="-1"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Delete Selected
                  </span>
                </button>
                <button
                  aria-label="cancel"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    cancel
                  </span>
                </button>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                >
                  common.totalSelected
                </p>
                <p
                  class="StyledProps--font StyledProps--main badge StyledProps--background-primary7 StyledProps--color StyledProps--color-white"
                >
                  0
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DeleteTemplateModal /> tests should match snapshot when status is failure for deleteTemplates operation 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <div
              class="Layout--horizontal StyledProps--main preview preview StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-center StyledProps--padding-top-huge StyledProps--padding-bottom-huge"
            >
              <div
                class="StyledProps--font StyledProps--main container"
              >
                <div
                  class="bp3-card bp3-elevation-0 Card--card templateCard"
                >
                  <div />
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-small StyledProps--flex"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="harness-with-color"
                      >
                        <svg
                          height="24"
                          viewBox="0 0 25 25"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
                      data-testid="manjutesttemplate"
                      style="--text-line-clamp: 1;"
                    >
                      manju-test-template-qq-12344
                    </p>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400 StyledProps--margin-top-xsmall"
                      style="--text-line-clamp: 1;"
                    >
                      idLabel
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag scopeLabel project"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          SCOPE: PROJECT
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main container"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main tagsContainer"
                      >
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              QAR
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Internal 1
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Canary 1
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              BLUE
                            </span>
                          </span>
                        </span>
                        <span
                          class="Tag--main"
                        >
                          <span
                            class="bp3-tag tag"
                            style="max-width: 80px;"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              Tag A
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--background-grey100"
                    style="height: 1px;"
                  />
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag version"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          v4
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--color StyledProps--color-grey800"
                      >
                        lastUpdated
                      </p>
                      <span
                        class="bp3-popover-wrapper bp3-dark"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <span
                            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-xsmall StyledProps--color StyledProps--color-grey800"
                            tabindex="0"
                          >
                            dummy date
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--padding-top-medium"
                  >
                    <div
                      class="css-12eylzo"
                      fill="#EADEFF"
                      stroke="#E1D0FF"
                      width="100"
                    >
                      <div>
                        <p
                          class="StyledProps--font StyledProps--main text absolutePos"
                          style="color: rgb(89, 43, 170);"
                        >
                          STEP
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main selectVersions StyledProps--padding-left-xxlarge StyledProps--padding-right-xxlarge"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                style="height: 100%;"
              >
                <div
                  class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
                  data-name=""
                  style="width: 100%; max-width: 100%;"
                >
                  <span
                    class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
                    data-icon="thinner-search"
                  >
                    <svg
                      fill="none"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input  ExpandingSearchInput--filter"
                    dir="auto"
                    placeholder="Search"
                    style="padding-right: 38px;"
                    type="search"
                    value=""
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="Layout--vertical StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-stretch"
                    style="height: 100%;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="overflow: auto; height: 300px;"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox selected Checkbox--checked StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main selected"
                        >
                          pipeline.templatesLibrary.stableVersion
                        </p>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox Checkbox--checked StyledProps--main"
                      >
                        <input
                          checked=""
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        common.selectAll
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-medium StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--border StyledProps--border-top StyledProps--border-color-grey100"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
          >
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end StyledProps--flex-justifyContent-flex-start"
              >
                <button
                  aria-label="Delete Selected"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Delete Selected
                  </span>
                </button>
                <button
                  aria-label="cancel"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    cancel
                  </span>
                </button>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                >
                  common.totalSelected
                </p>
                <p
                  class="StyledProps--font StyledProps--main badge StyledProps--background-primary7 StyledProps--color StyledProps--color-white"
                >
                  1
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
